<resources>
    <string name="app_name">Hillfort Here</string>
    <string name="menu_saveHillfort">Save Hillfort</string>
    <string name="button_addHillfort">Save Hillfort</string>
    <string name="hint_hillfortName">Enter Hillfort name</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="button_addImage"> Add Image </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="save_location"> Save Location </string>
    <string name="select_hillfort_image">Select Hillfort Image</string>
    <string name="change_image">Change Image</string>
<string name="edit_map">Tap x5 times to edit map </string>
    <string name="rating_label">Rate this Hillfort</string>

    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stats">Statistics</string>
    <string name="edtPassword">secret</string>
    <string name="edtUsername">homer@simpson.com</string>
    <string name="titleLongitude">Longitude:  </string>
    <string name="lat">Lat:  </string>
    <string name="lng">Long:  </string>
    <string name="button_location">View on Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_hillfort_maps">Map of all Hillforts</string>
    <string name="show_map">Show Map</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_description_placeholder">Description</string>
    <string name="uploadImage">uploadimage</string>
    <string name="todo">To Do</string>
    <string name="_00_000000">00.000000</string>
    <string name="image">image</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
    <string name="title_activity_login"> Signup/Login to Hillfort</string>
    <string name="email_label"> Email</string>
    <string name="password_label">Password</string>
    <string name="button_signup"> Sign up </string>
    <string name="button_login"> Log in </string>
    <string name="favourite"> Favourite!</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>


</resources>
