<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.jim.hillfort.views.hillfort.HillfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-1dp">

            <EditText
                android:id="@+id/hillfortName"
                android:layout_width="201dp"
                android:layout_height="46dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>


            <EditText
                android:id="@+id/description"
                android:layout_width="200dp"
                android:layout_height="82dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/lat"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/hillfortName"
                app:layout_constraintTop_toBottomOf="@+id/hillfortName" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="19dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <CheckBox
                android:id="@+id/favourite"
                android:layout_width="35dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/favourite"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:text="@string/favourite"
                android:onClick="onCheckboxClicked"
                app:layout_constraintStart_toEndOf="@+id/hillfortName"
                app:layout_constraintTop_toTopOf="@+id/hillfortName" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/_00_000000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortName" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="92dp"
                android:layout_height="19dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:text="@string/_00_000000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <ImageView
                android:id="@+id/hillfortImage"
                android:layout_width="300dp"
                android:layout_height="110dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="300dp"
                android:layout_height="162dp"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="181dp"
                android:layout_marginBottom="87dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

            <TextView
                android:id="@+id/favouriteLabel"
                android:layout_width="82dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:text="@string/favourite"
                app:layout_constraintStart_toEndOf="@+id/favourite"
                app:layout_constraintTop_toTopOf="@id/favourite" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="279dp"
                android:layout_height="31dp"
                android:layout_marginTop="28dp"
                android:numStars="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lng"
                app:layout_constraintVertical_bias="0.872" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
